--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/AppointmentTypes/AppointmentTypeDetailComponent.es-MX.resx
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/AppointmentTypes/AppointmentTypeDetailComponent.es-MX.resx
@@ -127,7 +127,7 @@
     <value>Código</value>
   </data>
   <data name="AppointmentTypeDetail_Label_Duration" xml:space="preserve">
-    <value>Duración</value>
+    <value>Duración (minutos)</value>
   </data>
   <data name="AppointmentTypeDetail_Label_Name" xml:space="preserve">
     <value>Nombre</value>
