Update AddEditAppointmentTypeComponent resource language in ClinicManagement.BlazorClient.Client #33

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/AppointmentTypes/AddEditAppointmentTypeComponent.en-US.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/AppointmentTypes/AddEditAppointmentTypeComponent.en-US.resx
@@ -127,7 +127,7 @@
     <value>Code is required</value>
   </data>
   <data name="AddEditAppointmentType_Duration_TextBox_Label" xml:space="preserve">
-    <value>Duration</value>
+    <value>Duration (minutes)</value>
   </data>
   <data name="AddEditAppointmentType_Duration_TextBox_PlaceHolder" xml:space="preserve">
     <value>Enter duration here...</value>
